<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvHello"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/mukta_vaani_light"
        android:letterSpacing="0.3"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:alpha="0.5"
        android:autofillHints=""
        android:backgroundTint="@android:color/holo_blue_light"
        android:ems="10"
        android:fontFamily="@font/mukta_vaani_light"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHello" />

    <EditText
        android:id="@+id/etPassword"
        android:autofillHints=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mukta_vaani_light"
        android:layout_marginTop="32dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:ems="10"
        android:hint="@string/password"
        android:textAlignment="center"
        android:alpha="0.5"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <ImageButton
        android:id="@+id/btnLogin"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:src="@android:drawable/ic_media_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/add"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegister"
        android:text="@string/register_now"
        style="@style/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:layout_marginBottom="20dp"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>