<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/gradient_list"
    android:id="@+id/registerLayout"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tvHello"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/mukta_vaani_light"
        android:letterSpacing="0.3"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/etEmailReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:alpha="0.5"
        android:autofillHints=""
        android:backgroundTint="@android:color/holo_blue_light"
        android:ems="10"
        android:fontFamily="@font/mukta_vaani_light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHello" />


    <EditText
        android:id="@+id/etPasswordReg"
        android:autofillHints=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mukta_vaani_light"
        android:layout_marginTop="32dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:ems="10"
        android:hint="@string/password"
        android:textAlignment="center"
        android:alpha="0.5"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailReg" />


        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up"
            android:background="@drawable/round_button"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:src="@android:drawable/ic_media_play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/add"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordReg"
            android:textColor="@android:color/black"
            android:textStyle="bold" />


        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:src="@android:drawable/ic_media_play"
            android:text="@string/login_screen"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/sign_up_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>